Added ErrorHandling and updated Tournament, TournamentController and TournamentService